Fix for bug 188440 (textfields clobber selection when they should not.)

mozilla/layout/html/forms/src/nsTextControlFrame.cpp
  mozilla/layout/html/forms/src/nsTextControlFrame.h

Revert back to using a private method (SelectAllContents()) which implements a select all of the text widget contents by manually creating a range and adding it to the selection. This avoids triggering the autocomplete selection listener, which listens for a selection reason of SELECTALL_REASON. This change should be undone once the autocomplete listener is modified to distinguish between a programatic select all and one generated by a user gesture.

r=brade  sr=sfraser@netscape.com